--- a/src/Server/public/main.css
+++ b/src/Server/public/main.css
@@ -1,5 +1,5 @@
 body {
-    background-color: blue;
+    background-color: #06ffd1;
     padding: 0px;
     margin: 0px;
 }
@@ -59,4 +59,80 @@ body {
 .inh-img {
     width: 130px;
     margin-bottom: 10px;
+}
+
+.map {
+    display: flex;
+    flex-direction: row;
+    flex-basis: 100%;
+    flex-wrap: wrap;
+    justify-content: left;
+    margin: 0 auto;
+}
+
+.container {
+    width: 100%;
+}
+
+.info {
+    width: 600px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 0 auto;
+    padding-top: 15px;
+}
+
+.info-name {
+    height: 18px;
+    margin: 3px;
+}
+
+.count {
+    width: 40px;
+    height: 18px;
+    margin: 3px;
+    padding-left: 3px;
+}
+
+.cats-count {
+    background: yellow;
+}
+
+.dogs-count {
+    background: rgba(183, 148, 227, 0.7);
+}
+
+.buldozers-count {
+    background: red;
+}
+
+.cards-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.inhabit-container {
+    width: 560px;
+}
+
+.card {
+    float: left;
+    width: 170px;
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    background: white;
+    border: 1px solid black;
+    box-shadow: 1px 1px 1px black;
+    margin: 5px;
+}
+
+.card img {
+    width: 100%;
+}
+
+.card span {
+    margin-left: 5px;
 }
